--- a/itblog/article/templates/article/homepage.html
+++ b/itblog/article/templates/article/homepage.html
@@ -1,20 +1,19 @@
 {% extends 'base.html' %} 
 
 {%  block content %} 
+   
+
     <h1>Article</h1>
     {%  for a  in art %}
-        <li><b>{{a.title}} </b><br>
-            {{a.text}}
-            <br>
-            <i>{{a.author}} </i>
-            <br>
-            {{ a.comments}}
+        <li> <a href="/article/{{a.pk}}/">{{a.title}} </a>
+           <i> <a href="{% url 'author_info' %}"> author -  {{a.author}}  </a> </i>
+           <h4> readers - {{ a.readers.count}} </h4>
+           <h4>likes - {{ a.likes}}</h4>
          </li>
             <hr>
     {% endfor %}
  
-    {% for art in  wind.art.all %} 
-    <li>{{ art.title }}></li>
-    {% endfor %}
+
 
 {%   endblock %} 
+
