profile + add profile

--- a/itblog/article/templates/article/author.html
+++ b/itblog/article/templates/article/author.html
@@ -3,10 +3,10 @@
 {%  block content %} 
     
         
-     <h3> {{a.author}}</h3>
+     <h3> - {{authors.author}} -</h3>
       
               
-     <h4> publications  - {{ a.text.count}} </h4>
+     <h4> publications  - {{ authors.text.count}} </h4>
               
 
       <hr>
