--- a/itblog/article/templates/article/homepage.html
+++ b/itblog/article/templates/article/homepage.html
@@ -6,7 +6,7 @@
     <h1>Article</h1>
     {%  for a  in art %}
         <li> <a href="/article/{{a.pk}}/">{{a.title}} </a>
-           <i> <a href="{% url 'author_info' %}"> author -  {{a.author}}  </a> </i>
+           <i> <a href="{% url 'profile' a.author.pk %}"> author -  {{a.author}}  </a> </i>
            <h4> readers - {{ a.readers.count}} </h4>
            <h4>likes - {{ a.likes}}</h4>
          </li>
