--- a/itblog/article/templates/article/add_author.html
+++ b/itblog/article/templates/article/add_author.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 {%  block content %} 
-    <h2> Добавление статьи</h2>
+    <h2> Добавление автора </h2>
     <form method="POST">
         {% csrf_token %}
         {% bootstrap_form form %}
