--- a/itblog/article/templates/base.html
+++ b/itblog/article/templates/base.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="{% url 'add_article' %}"> add-article </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'add_article' %}"> add-author </a>
+                <a class="nav-link" href="{% url 'add_author' %}"> add-author </a>
             </li>
           
            
