--- a/itblog/article/templates/article.html
+++ b/itblog/article/templates/article.html
@@ -15,10 +15,15 @@
         {% endfor %}
     </ul>
     <hr>
+        <a href="{% url 'edit_article' article.id %}" class="btn btn-lg btn-warning">edit </a>
+  
+    <br>
+    <br>
     <from action="POST">
         {% csrf_token %}
         <button class="btn btn-lg btn-danger"> DELETE  </button>
     </from> 
+   
  
     
 
