add_comment added

--- a/itblog/article/templates/base.html
+++ b/itblog/article/templates/base.html
@@ -27,6 +27,7 @@
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="{% url 'add_article' %}">add-article</a>
                   <a class="dropdown-item" href="{% url 'add_author' %}">add-author</a>
+                  <a class="dropdown-item" href="{% url 'add_comment' %}">add_comment</a>
                   
                 </div>
               </li>
