--- a/itblog/article/templates/article/homepage.html
+++ b/itblog/article/templates/article/homepage.html
@@ -4,14 +4,16 @@
    
 
     <h1>Article</h1>
-    {%  for a  in art %}
+    {%  for a  in article %}
         <li> <a href="/article/{{a.pk}}/">{{a.title}} </a>
            <i> <a href="{% url 'profile' a.author.pk %}"> author -  {{a.author}}  </a> </i>
            <h4> readers - {{ a.readers.count}} </h4>
            <h4>likes - {{ a.likes}}</h4>
-         </li>
+        
             <hr>
     {% endfor %}
+
+
  
 
 
