--- a/itblog/article/templates/article/profile.html
+++ b/itblog/article/templates/article/profile.html
@@ -4,7 +4,8 @@
     <h1>{{ author.name}} </h1>
 
     <h3>{{ author.articles.count}}</h3>
-    
+       
+    <img src="{{ author.photo.url }}" width="80%">
    <hr>
 
 
