--- a/itblog/article/templates/article/profile.html
+++ b/itblog/article/templates/article/profile.html
@@ -4,8 +4,10 @@
     <h1>{{ author.name}} </h1>
 
     <h3>{{ author.articles.count}}</h3>
-       
-    <img src="{{ author.photo.url }}" width="80%">
+    
+    {% if author.photo %}
+        <img src="{{ author.photo.url }}" width="80%">
+    {% endfor %}
    <hr>
 
 
