auto count  readers and views

--- a/itblog/article/templates/article.html
+++ b/itblog/article/templates/article.html
@@ -9,9 +9,10 @@
     <br>
     <h4> Author : {{article.author}} <br> 
          Likes:{{article.likes}} <br>
-         readed by  :{{article.readers.count}}
-         Date of pablictation : {{article.publication_date}}
-         Updated date : {{article.updated_date}}
+         readed by  :{{article.readers.count}} <br>
+         seen by : {{ article.views }} <br>
+         Date of pablictation : {{article.publication_date}} <br>
+         Updated date : {{article.updated_date}} 
         </h4> 
 
     <ul>
