--- a/itblog/article/templates/base.html
+++ b/itblog/article/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="/">Статьи </a>
             </li>
@@ -33,8 +33,13 @@
 
                   
                 </div>
-              </li>
+            </li>
           </ul>
+          <form class="form-inline" action="{% url 'homepage' %} " method="POST">
+                {% csrf_token %}
+                <input class="form-control mr-sm-2" name='key_word' placeholder="Search">
+                <button class="btn btn-primary" type="submit">Search</button>
+          </form>
 
     </nav>
     
