--- a/itblog/article/templates/article/add_comment.html
+++ b/itblog/article/templates/article/add_comment.html
@@ -2,6 +2,7 @@
 {% load bootstrap4 %}
 
 {%  block content %} 
+    {% include 'includes/security_message.html' %}
     <h2> Добавление comment </h2>
     <form method="POST">
         {% csrf_token %}
