--- a/itblog/article/templates/article/profile.html
+++ b/itblog/article/templates/article/profile.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} 
 
 {%  block content %} 
+    {% include "includes/message.html" %}
     <h1>{{ author.name}} </h1>
 
     <h3>{{ author.articles.count}}</h3>
